--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
     "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^4.5.2",
+    "idb": "^6.0.0",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.7.1",
     "karma": "^5.2.3",
@@ -28,6 +31,7 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^1.3.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
